# CowStudyApp

./: .dockerignore  .gitignore  .pyproject.toml.kate-swp  Dockerfile  EXACT_LAPTOP_VERSIONS.txt  EvalOfOnlineMethods.xlsx  LICENSE  README.md  fix_fstrings.py  fix_fstrings.py.bak  git_merge_conflicts.sh  mypy.ini  pyproject.toml  requirements.txt  run_processing.py  show-tree.ps1  test_vis_config.py
.github/workflows/: ci.yml
config/: RB_19Test2.yaml  RB_19_22_combined_config.yaml  RB_19_config.yaml  RB_22_config.yaml  RB_22_config_website.yaml  default.yaml
cowstudyapp/: build_processed_data.py  compare_descriptive_stats.py  config.py  make_visuals.py  run_analysis.py  utils.py
cowstudyapp/analysis/: Make_F1_Performance_table.jl
cowstudyapp/analysis/HMM/: .Rhistory  AddingDayNightCols.R  Compare_distributions_of_feature_data.R  compare_models.r  run_hmm.r
cowstudyapp/analysis/RNN/: hyper_parameter_tuning.py  run_lstm.py  utils.py
cowstudyapp/dataset_building/: features.py  io.py  labels.py  merge.py  validation.py
cowstudyapp/visuals/: Fix_r_BS.R  example_formula.md  make_heatmap_of_predictions.py  show_cow_info_vs_pred.py  show_cow_info_vs_pred_old.py  show_domain_of_data.py  show_effects_glmm.py  show_feature_distr.py  show_moon_versus_grazing.py  show_radar_plots.py  show_ridgelines_labeled.py  show_temp_vs_activity.py  show_temp_vs_activity_Bayes.py  show_temp_vs_grazing_new.py
data/analysis_results/hmm/: hmm_config.json
data/cv_results/HMM/: cv_results.txt
data/img/: AnalysisFlow.drawio
data/models/HMM/: hmm_config.json
data/predictions/HMM/: model_parameters.txt
data/processed/RB_19/: all_cows_labeled.csv_dqr.json  data_quality_report.json
data/processed/RB_22/: all_cows_labeled.csv_dqr.json
src/: build_processed_data.py  compare_descriptive_stats.py  compare_descriptive_stats.py.bak  make_visuals.py  make_visualsdumbassdiditnputitintherighthole.py  run_analysis.py  run_analysisdumbassputitinthewrongspot.py  test_r.py
src/cowstudyapp/: build_processed_data.py  compare_descriptive_stats.py  config.py  config_old.py  core.py  features.py  features_old.py  io.py  main.py  make_visuals.py  merge.py  run_analysis.py  utils.py  validation.py
src/cowstudyapp/dataset_building/: features.py  io.py  io.py.bak  labels.py  merge.py  validation.py
src/cowstudyapp/visuals/: Fix_r_BS.R  Show_time_covariates.R  make_heatmap_of_predictions.py  show_cow_info_vs_pred.py  show_cow_info_vs_pred_old.py  show_domain_of_data.py  (+9 more)
srcDEP/cowstudyapp/: build_processed_data.py  make_visuals.py  run_analysis.py
tests/: checking_preds.py  leave_multi_out_testing.py  readingpkl.py  test_acc_interpolate.py  test_config_factory.py  test_core.py  test_features.py  test_io.py  test_merge.py  test_update.py  test_utils.py  test_validation_split.py
(+99 files in other folders)
