[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cowstudyapp"
version = "0.3.0"
authors = [
    { name = "Thomas Lipinski", email = "thomaslipinski@montana.edu" },
]
description = "A package for processing sensor data in pursuit of Precision Livestock Management."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "pytz>=2023.3",
    "pyproj>=3.7.0",
    "pandas-stubs>=2.0.0",
    "types-pytz>=2025.1",
    "matplotlib>=3.7.0",
    "tensorflow>=2.18.0",
    "scikit-learn>=1.2.0",
    "seaborn>=0.12.0",    
    "statsmodels>=0.14.4",    
    "openpyxl>=3.1.5",    
    "ephem>=4.2",    
    "tabulate>=0.9.0",
    "scikit-optimize>=0.10.2"
    ]
    
    
[project.optional-dependencies]
dev = ["pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
r = [
    "pymer4>=0.8.2",
    "rpy2>=3.5.13",
]
[tool.hatch.metadata]
requires-external = [
    "R >= 4.4.1",
]

[tool.hatch.build.targets.wheel]
# packages = ["src/cowstudyapp"]
packages = ["cowstudyapp"]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
